# alarmbot

./: README.md
firmware/: Cargo.toml  Embed.toml
firmware/.cargo/: config.toml
firmware/src/: main.rs
pcb/: .gitignore  alarmbot-NPTH.drl  alarmbot-PTH.drl  alarmbot.ioc  alarmbot.kicad_dru  alarmbot.kicad_pcb  alarmbot.kicad_pro  alarmbot.kicad_sch  aux_servo.kicad_sch  aux_servos.kicad_sch  camera_usb.kicad_sch  cm5.kicad_sch  external_i2c.kicad_sch  fp-lib-table  imu.kicad_sch  led.kicad_sch  magjack.kicad_sch  mcu.kicad_sch  power_regulation.kicad_sch  shoulder.kicad_sch  stepper_motor_driver.kicad_sch  sym-lib-table  tof.kicad_sch  wheel_motor_drive.kicad_sch
