[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "derive",
] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.2", features = [
    "stm32g431cb",
    "rt",
    "unstable-pac",
] }
panic-rtt-target = { version = "0.2" }
rtt-target = "0.6"
rtic = { version = "2.1", features = ["thumbv7-backend"] }

[profile.dev]
opt-level = 3
debug = 2
codegen-units = 1
overflow-checks = false
debug-assertions = false
lto = true

[profile.release]
opt-level = 3
debug = 2
codegen-units = 1
incremental = false
overflow-checks = false
lto = true
